sumo/tests/sumo/errors/network/edge/lane/root__edge__lane#depart__ungiven11/errors.sumo
Error: Missing attribute in a lane-object (id='1_0').
 Can not build according edge.
Error: An unknown lane ('1_0') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1_0').
Error: Trying to close connections of an unknown lane ('1_1').
Quitting (on error).
